--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/simplebar.min.css">
-  <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
   <!-- Main CSS-->
   <link rel="stylesheet" href="css/main.css">
   <!-- CSS Color scheme-->
-  <link id="color-scheme" rel="stylesheet" href="css/colors/main-red.css">
+  <link id="color-scheme" rel="stylesheet" href="css/colors/main-blue.css">
 </head>
 
 <body>
@@ -446,10 +445,10 @@
           </div>
         </div>
         <!-- Single lightbox-->
-        <div class="lightbox-wrapper" id="item-6">
+        <div class="lightbox-wrapper" id="item-6"> 
           <div class="f-basis-100">
             <div class="lightbox-close" data-modal-close><span class="close-btn"><span class="btn-line"></span></span></div>
-          </div>
+          </div> 
           <div class="container">
             <div class="row">
               <div class="col-12 col-lg-5">
@@ -533,8 +532,8 @@
             <div class="col-12">
               <form class="contact-form" id="contact-form" action="php/contact.php">
                 <div class="row">
-                  <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-name" type="text" name="name" placeholder="Name" required=""></div>
-                  <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required=""></div>
+                  <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-name" type="text" name="name" placeholder="Name" autocomplete="name" required=""></div>
+                  <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" autocomplete="email" required=""></div>
                   <div class="col-12 form-group"><input class="form-control" id="contact-subject" type="text" name="subject" placeholder="Subject" required=""></div>
                   <div class="col-12 form-group form-message"><textarea class="form-control" id="contact-message" name="message" placeholder="Message" rows="5" required=""></textarea></div>
                   <div class="col-12 form-submit"><button class="btn button-main button-scheme" id="contact-submit" type="submit">Send message</button>
@@ -552,23 +551,28 @@
           <div class="row contact-info">
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-map"></i>
-                <p class="info-content"><a href="https://goo.gl/maps/2YAGiugG47VAS17g7" target="_blank">4155, Liverpool, United Kingdom.</a></p>
+                <p class="info-content"><a href="https://goo.gl/maps/2YAGiugG47VAS17g7" target="_blank">11405, Santo Domingo, Dominican Republic.</a></p>
               </div>
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-call"></i>
-                <p class="info-content"><a href="tel:+441632967704">+44 1632 967704</a></p>
+                <p class="info-content"><a href="tel:+441632967704">+1(849) 409 5436</a></p>
               </div>
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-send"></i>
-                <p class="info-content"><a href="mailto:alex@example.com">alex@example.com</a></p>
+                <p class="info-content"><a href="mailto:ramonlebronc@gmail.com">ramonlebronc@gmail.com</a></p>
               </div>
             </div>
           </div>
+
           <div class="row mini-footer">
-            <div class="social-medias col-12 col-lg-5"><a class="twitter" href="#0"><i class="icon ion-logo-twitter"></i></a><a class="instagram" href="#0"><i class="icon ion-logo-instagram"></i></a><a class="linkedin" href="#0"><i class="icon ion-logo-linkedin"></i></a><a class="youtube" href="#0"><i class="icon ion-logo-youtube"></i></a><a class="github" href="#0"><i class="icon ion-logo-github"></i></a><a class="facebook" href="#0"><i class="icon ion-logo-facebook"></i></a></div>
-            <p class="copyright-notice col-12 col-lg-7">Copyright © 2019 CardX, all rights reserved. Developed by <a href="https://themeforest.net/user/exill" target="_blank">Exill</a>.</p>
+            <div class="social-medias col-12 col-lg-5">
+              <a class="instagram" href="#0"><i class="icon ion-logo-instagram"></i></a>
+              <a class="linkedin" href="#0"><i class="icon ion-logo-linkedin"></i></a>
+              <a class="github" href="#0"><i class="icon ion-logo-github"></i></a>
+            </div>
+            <p class="copyright-notice col-12 col-lg-7">Copyright © 2024 Ramon Lebron, all rights reserved.</p>
           </div>
         </div>
       </footer>
@@ -581,7 +585,6 @@
   <script src="js/animatedModal.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/simplebar.min.js"></script>
-  <script src="js/jquery.mb.YTPlayer.min.js"></script>
   <script src="js/particles.js"></script>
   <script src="js/main.js"></script>
 </body>
