--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     <div class="sections-wrapper">
       <!-- Sections-->
       <!-- Home-->
-      <section class="home-area element-cover-bg galaxy-variant" id="home-area" style="background-image:url(img/home.jpg)">
+      <section class="home-area element-cover-bg galaxy-variant" id="home-area" style="background-color: black;">
         <div id="particles-js"></div>
         <div class="container h-100">
           <div class="row h-100 align-items-center justify-content-center">
             <div class="col-12 col-lg-8 home-content text-center">
               <h1 class="home-name">Ram&oacute;n E.<span> Lebr&oacute;n</span></h1>
-              <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Developer</b><b>Database administrator</b><b>Freelancer</b></span></h4>
+              <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Web application developer</b><b>Database administrator</b><b>Freelancer</b></span></h4>
             </div><a href="#about-area" data-scroll>
             </a>
           </div>
@@ -75,7 +75,7 @@
       </section>
 
       <!-- About-->
-      <section class="single-section about-area" id="about-area" style="padding: 28px 40px;">
+      <section class="single-section about-area" id="about-area" style="padding: 34px 40px;">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -146,43 +146,43 @@
           <div class="row">
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-service"><i class="icon service-icon ion-logo-css3"></i>
-                <h6 class="service-title">Design Trends</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              </div>
-            </div>
-            <!-- Single service-->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-service"><i class="icon service-icon ion-md-images"></i>
-                <h6 class="service-title">PSD Design</h6>
-                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              </div>
-            </div>
-            <!-- Single service-->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-service"><i class="icon service-icon ion-logo-ionic"></i>
+              <div class="single-service"><svg class="logobox2" preserveAspectRatio="xMidYMid" viewBox="0 0 256 288" xmlns="http://www.w3.org/2000/svg"><path d="m255.569 84.452376c-.002-4.83-1.035-9.098-3.124-12.761-2.052-3.602-5.125-6.621-9.247-9.008-34.025-19.619-68.083-39.178-102.097-58.81699995-9.17-5.294-18.061-5.101-27.163.269-13.543 7.98699995-81.348 46.83399995-101.553 58.53699995-8.321 4.817-12.37 12.189-12.372 21.771-.013 39.455 0 78.909-.013 118.365 0 4.724.991 8.909 2.988 12.517 2.053 3.711 5.169 6.813 9.386 9.254 20.206 11.703 88.02 50.547 101.56 58.536 9.106 5.373 17.997 5.565 27.17.269 34.015-19.64 68.075-39.198 102.105-58.817 4.217-2.44 7.333-5.544 9.386-9.252 1.994-3.608 2.987-7.793 2.987-12.518 0 0 0-78.889-.013-118.345" fill="#a179dc"/><path d="m128.182 143.241376-125.194 72.084c2.053 3.711 5.169 6.813 9.386 9.254 20.206 11.703 88.02 50.547 101.56 58.536 9.106 5.373 17.997 5.565 27.17.269 34.015-19.64 68.075-39.198 102.105-58.817 4.217-2.44 7.333-5.544 9.386-9.252z" fill="#280068"/><path d="m255.569 84.452376c-.002-4.83-1.035-9.098-3.124-12.761l-124.263 71.55 124.413 72.074c1.994-3.608 2.985-7.793 2.987-12.518 0 0 0-78.889-.013-118.345" fill="#390091"/><g fill="#fff"><path d="m201.892326 116.294008v13.473684h13.473684v-13.473684h6.736842v13.473684h13.473685v6.736842h-13.473685v13.473684h13.473685v6.736842h-13.473685v13.473684h-6.736842v-13.473684h-13.473684v13.473684h-6.736842v-13.473684h-13.473684v-6.736842h13.473684v-13.473684h-13.473684v-6.736842h13.473684v-13.473684zm13.473684 20.210526h-13.473684v13.473684h13.473684z"/><path d="m128.456752 48.625876c35.143771 0 65.827133 19.0862981 82.26181 47.4560675l-.16037-.2730675-41.348577 23.808283c-8.146656-13.793605-23.081479-23.1020873-40.213232-23.2937868l-.539631-.0030178c-26.125574 0-47.3060815 21.1793886-47.3060815 47.3049616 0 8.543615 2.2777748 16.552204 6.2389764 23.469476 8.1540981 14.235253 23.4829071 23.836606 41.0671051 23.836606 17.69277 0 33.108884-9.723357 41.221568-24.110835l-.197128.345313 41.286486 23.918037c-16.254398 28.129557-46.517408 47.156948-81.252701 47.536189l-1.058225.005774c-35.2545819 0-66.0252492-19.203824-82.4185122-47.72358-8.0029927-13.922969-12.5820476-30.064389-12.5820476-47.27698 0-52.4660524 42.5322682-94.99944 95.0005598-94.99944z"/></g></svg>
                 <h6 class="service-title">Customer Support</h6>
                 <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-service mb-lg-0"><i class="icon service-icon ion-logo-wordpress"></i>
+              <div class="single-service"><svg class="logobox" preserveAspectRatio="xMidYMid" viewBox="0 0 256 135" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><radialGradient id="a" cx="76.8517458" cy="23.667707" gradientUnits="userSpaceOnUse" r="168.0951595"><stop offset="0" stop-color="#fff"/><stop offset=".5" stop-color="#4c6b97"/><stop offset="1" stop-color="#231f20"/></radialGradient><ellipse cx="128" cy="67.3" fill="url(#a)" rx="128" ry="67.3"/><ellipse cx="128" cy="67.3" fill="#6181b6" rx="123" ry="62.3"/><path d="m152.9 87.5s6.1-31.4 6.1-31.4c1.4-7.1.2-12.4-3.4-15.7-3.5-3.2-9.5-4.8-18.3-4.8h-10.6l3-15.6c.1-.6 0-1.2-.4-1.7s-.9-.7-1.5-.7h-14.6c-1 0-1.8.7-2 1.6l-6.5 33.3c-.6-3.8-2-7-4.4-9.6-4.3-4.9-11-7.4-20.1-7.4h-28.1c-1 0-1.8.7-2 1.6l-13.1 67.6c-.1.6 0 1.2.4 1.7s.9.7 1.5.7h14.7c1 0 1.8-.7 2-1.6l3.2-16.3h10.9c5.7 0 10.6-.6 14.3-1.8 3.9-1.3 7.4-3.4 10.5-6.3 2.5-2.3 4.6-4.9 6.2-7.7l-2.6 13.5c-.1.6 0 1.2.4 1.7s.9.7 1.5.7h14.6c1 0 1.8-.7 2-1.6l7.2-37h10c4.3 0 5.5.8 5.9 1.2.3.3.9 1.5.2 5.2l-5.8 29.9c-.1.6 0 1.2.4 1.7s.9.7 1.5.7h15c.9-.3 1.7-1 1.9-1.9zm-67.6-26c-.9 4.7-2.6 8.1-5.1 10s-6.6 2.9-12 2.9h-6.5l4.7-24.2h8.4c6.2 0 8.7 1.3 9.7 2.4 1.3 1.6 1.6 4.7.8 8.9z" fill="#fff"/><path d="m215.3 42.9c-4.3-4.9-11-7.4-20.1-7.4h-28.3c-1 0-1.8.7-2 1.6l-13.1 67.5c-.1.6 0 1.2.4 1.7s.9.7 1.5.7h14.7c1 0 1.8-.7 2-1.6l3.2-16.3h10.9c5.7 0 10.6-.6 14.3-1.8 3.9-1.3 7.4-3.4 10.5-6.3 2.6-2.4 4.8-5.1 6.4-8s2.8-6.1 3.5-9.6c1.7-8.7.4-15.5-3.9-20.5zm-15.3 18.6c-.9 4.7-2.6 8.1-5.1 10s-6.6 2.9-12 2.9h-6.5l4.7-24.2h8.4c6.2 0 8.7 1.3 9.7 2.4 1.4 1.6 1.7 4.7.8 8.9z" fill="#fff"/><g fill="#000004"><path d="m74.8 48.2c5.6 0 9.3 1 11.2 3.1s2.3 5.6 1.3 10.6c-1 5.2-3 9-5.9 11.2s-7.3 3.3-13.2 3.3h-8.9l5.5-28.2zm-35.8 56.8h14.7l3.5-17.9h12.6c5.6 0 10.1-.6 13.7-1.8s6.8-3.1 9.8-5.9c2.5-2.3 4.5-4.8 6-7.5s2.6-5.7 3.2-9c1.6-8 .4-14.2-3.5-18.7s-10.1-6.7-18.6-6.7h-28.3z"/><path d="m113.3 19.6h14.6l-3.5 17.9h13c8.2 0 13.8 1.4 16.9 4.3s4 7.5 2.8 13.9l-6.1 31.4h-14.8l5.8-29.9c.7-3.4.4-5.7-.7-6.9s-3.6-1.9-7.3-1.9h-11.7l-7.5 38.7h-14.6z"/><path d="m189.5 48.2c5.6 0 9.3 1 11.2 3.1s2.3 5.6 1.3 10.6c-1 5.2-3 9-5.9 11.2s-7.3 3.3-13.2 3.3h-8.9l5.5-28.2zm-35.8 56.8h14.7l3.5-17.9h12.6c5.6 0 10.1-.6 13.7-1.8s6.8-3.1 9.8-5.9c2.5-2.3 4.5-4.8 6-7.5s2.6-5.7 3.2-9c1.6-8 .4-14.2-3.5-18.7s-10.1-6.7-18.6-6.7h-28.3z"/></g></svg>
+                <h6 class="service-title">Design Trends</h6>
+                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              </div>
+            </div>
+            <!-- Single service-->
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="single-service"><svg class="logobox1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m2 2h28v28h-28z" fill="#f5de19"/><path d="m20.809 23.875a2.866 2.866 0 0 0 2.6 1.6c1.09 0 1.787-.545 1.787-1.3 0-.9-.716-1.222-1.916-1.747l-.658-.282c-1.9-.809-3.16-1.822-3.16-3.964 0-1.973 1.5-3.476 3.853-3.476a3.889 3.889 0 0 1 3.742 2.107l-2.057 1.315a1.789 1.789 0 0 0 -1.689-1.128 1.145 1.145 0 0 0 -1.259 1.128c0 .789.489 1.109 1.618 1.6l.658.282c2.236.959 3.5 1.936 3.5 4.133 0 2.369-1.861 3.667-4.36 3.667a5.055 5.055 0 0 1 -4.795-2.691zm-9.295.228c.413.733.789 1.353 1.693 1.353.864 0 1.41-.338 1.41-1.653v-8.947h2.631v8.982c0 2.724-1.6 3.964-3.929 3.964a4.085 4.085 0 0 1 -3.947-2.4z"/></svg>
+                <h6 class="service-title">PSD Design</h6>
+                <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              </div>
+            </div>
+            <!-- Single service-->
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="single-service mb-lg-0"><svg class="logobox3" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"><path d="m2.001 90.458h4.108v-16.223l6.36 14.143c.75 1.712 1.777 2.317 3.792 2.317s3.003-.605 3.753-2.317l6.36-14.143v16.223h4.108v-16.196c0-1.58-.632-2.345-1.936-2.739-3.121-.974-5.215-.131-6.163 1.976l-6.241 13.958-6.043-13.959c-.909-2.106-3.042-2.949-6.163-1.976-1.304.395-1.936 1.159-1.936 2.739v16.197zm31.898-13.206h4.107v8.938c-.038.485.156 1.625 2.406 1.661 1.148.018 8.862 0 8.934 0v-10.643h4.117c.019 0-.004 14.514-.004 14.574.022 3.58-4.441 4.357-6.499 4.417h-12.972v-2.764c.022 0 12.963.003 12.995-.001 2.645-.279 2.332-1.593 2.331-2.035v-1.078h-8.731c-4.062-.037-6.65-1.81-6.683-3.85-.002-.187.089-9.129-.001-9.219z" fill="#00618a"/><path d="m56.63 90.458h11.812c1.383 0 2.727-.289 3.793-.789 1.777-.816 2.646-1.922 2.646-3.372v-3.002c0-1.185-.987-2.292-2.923-3.028-1.027-.396-2.292-.605-3.517-.605h-4.978c-1.659 0-2.449-.5-2.646-1.606-.039-.132-.039-.237-.039-.369v-1.87c0-.105 0-.211.039-.342.197-.843.632-1.08 2.094-1.212l.395-.026h11.733v-2.738h-11.535c-1.659 0-2.528.105-3.318.342-2.449.764-3.517 1.975-3.517 4.082v2.396c0 1.844 2.095 3.424 5.61 3.793.396.025.79.053 1.185.053h4.267c.158 0 .316 0 .435.025 1.304.105 1.856.343 2.252.816.237.237.315.475.315.737v2.397c0 .289-.197.658-.592.974-.355.316-.948.527-1.738.58l-.435.026h-11.338zm43.881-4.766c0 2.817 2.094 4.397 6.32 4.714.395.026.79.052 1.185.052h10.706v-2.738h-10.784c-2.41 0-3.318-.606-3.318-2.055v-14.168h-4.108v14.195zm-23.008.142v-9.765c0-2.48 1.742-3.985 5.186-4.46.356-.053.753-.079 1.108-.079h7.799c.396 0 .752.026 1.147.079 3.444.475 5.187 1.979 5.187 4.46v9.765c0 2.014-.74 3.09-2.445 3.792l4.048 3.653h-4.771l-3.274-2.956-3.296.209h-4.395c-.752 0-1.543-.105-2.414-.343-2.613-.712-3.88-2.085-3.88-4.355zm4.434-.237c0 .132.039.265.079.423.237 1.135 1.307 1.768 2.929 1.768h3.732l-3.428-3.095h4.771l2.989 2.7c.552-.295.914-.743 1.041-1.32.039-.132.039-.264.039-.396v-9.368c0-.105 0-.238-.039-.37-.238-1.056-1.307-1.662-2.89-1.662h-6.216c-1.82 0-3.008.792-3.008 2.032v9.288z" fill="#e48e00"/><path d="m122.336 66.952c-2.525-.069-4.454.166-6.104.861-.469.198-1.216.203-1.292.79.257.271.297.674.502 1.006.394.637 1.059 1.491 1.652 1.938.647.489 1.315 1.013 2.011 1.437 1.235.754 2.615 1.184 3.806 1.938.701.446 1.397 1.006 2.082 1.509.339.247.565.634 1.006.789v-.071c-.231-.294-.291-.698-.503-1.006l-.934-.934c-.913-1.212-2.071-2.275-3.304-3.159-.982-.705-3.18-1.658-3.59-2.801l-.072-.071c.696-.079 1.512-.331 2.154-.503 1.08-.29 2.045-.215 3.16-.503l1.508-.432v-.286c-.563-.578-.966-1.344-1.58-1.867-1.607-1.369-3.363-2.737-5.17-3.879-1.002-.632-2.241-1.043-3.304-1.579-.356-.181-.984-.274-1.221-.575-.559-.711-.862-1.612-1.293-2.441-.9-1.735-1.786-3.631-2.585-5.458-.544-1.245-.9-2.473-1.579-3.59-3.261-5.361-6.771-8.597-12.208-11.777-1.157-.677-2.55-.943-4.021-1.292l-2.37-.144c-.481-.201-.983-.791-1.436-1.077-1.802-1.138-6.422-3.613-7.756-.358-.842 2.054 1.26 4.058 2.011 5.099.527.73 1.203 1.548 1.58 2.369.248.54.29 1.081.503 1.652.521 1.406.976 2.937 1.651 4.236.341.658.718 1.351 1.149 1.939.264.36.718.52.789 1.077-.443.62-.469 1.584-.718 2.369-1.122 3.539-.699 7.938.934 10.557.501.805 1.681 2.529 3.303 1.867 1.419-.578 1.103-2.369 1.509-3.95.092-.357.035-.621.215-.861v.072l1.293 2.585c.957 1.541 2.654 3.15 4.093 4.237.746.563 1.334 1.538 2.298 1.867v-.073h-.071c-.188-.291-.479-.411-.719-.646-.562-.551-1.187-1.235-1.651-1.867-1.309-1.776-2.465-3.721-3.519-5.745-.503-.966-.94-2.032-1.364-3.016-.164-.379-.162-.953-.502-1.148-.466.72-1.149 1.303-1.509 2.154-.574 1.36-.648 3.019-.861 4.739l-.144.071c-1.001-.241-1.352-1.271-1.724-2.154-.94-2.233-1.115-5.83-.287-8.401.214-.666 1.181-2.761.789-3.376-.187-.613-.804-.967-1.148-1.437-.427-.579-.854-1.341-1.149-2.011-.77-1.741-1.129-3.696-1.938-5.457-.388-.842-1.042-1.693-1.58-2.441-.595-.83-1.262-1.44-1.724-2.442-.164-.356-.387-.927-.144-1.293.077-.247.188-.35.432-.431.416-.321 1.576.107 2.01.287 1.152.479 2.113.934 3.089 1.58.468.311.941.911 1.508 1.077h.646c1.011.232 2.144.071 3.088.358 1.67.508 3.166 1.297 4.524 2.155 4.139 2.614 7.522 6.334 9.838 10.772.372.715.534 1.396.861 2.154.662 1.528 1.496 3.101 2.154 4.596.657 1.491 1.298 2.996 2.227 4.237.488.652 2.374 1.002 3.231 1.364.601.254 1.585.519 2.154.861 1.087.656 2.141 1.437 3.16 2.155.509.362 2.076 1.149 2.154 1.798zm-32.099-27.359c-.526-.01-.899.058-1.293.144v.071h.072c.251.517.694.849 1.005 1.293l.719 1.508.071-.071c.445-.313.648-.814.646-1.58-.179-.188-.205-.423-.359-.646-.204-.3-.602-.468-.861-.719z" fill="#00618a"/></svg>
                 <h6 class="service-title">Web Development</h6>
                 <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-service mb-md-0"><i class="icon service-icon ion-md-move"></i>
-                <h6 class="service-title">Fully Responsive</h6>
+              <div class="single-service mb-0"><svg class="logobox" fill="none" viewBox="0 0 1200 1600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><filter id="a" color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse" height="1210.67" width="560.66699" x="519.66699" y="396"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/><feOffset dy=".253333"/><feGaussianBlur stdDeviation=".253333"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"/><feBlend in2="BackgroundImageFix" mode="normal" result="effect1_dropShadow"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/><feOffset dy="1.33333"/><feGaussianBlur stdDeviation="2.66667"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.18 0"/><feBlend in2="effect1_dropShadow" mode="normal" result="effect2_dropShadow"/><feBlend in="SourceGraphic" in2="effect2_dropShadow" mode="normal" result="shape"/></filter><linearGradient id="b" gradientUnits="userSpaceOnUse" x1="758.33301" x2="1447.8199" y1="-.000015" y2="1507.15"><stop offset="0" stop-color="#e6ad10"/><stop offset="1" stop-color="#c87e0e"/></linearGradient><linearGradient id="c" gradientUnits="userSpaceOnUse" x1="524.95502" x2="1105.79" y1="400" y2="1561.67"><stop offset="0" stop-color="#f6d751"/><stop offset="1" stop-color="#e6ad10"/></linearGradient><linearGradient id="d" gradientUnits="userSpaceOnUse" x1="199.955" x2="519.784" y1="800" y2="1581.6801"><stop offset="0" stop-color="#f9e589"/><stop offset="1" stop-color="#f6d751"/></linearGradient><mask id="e" height="1600" maskUnits="userSpaceOnUse" width="1200" x="200" y="0"><path d="m1333.25 0c36.86 0 66.75 29.8849 66.75 66.75v1466.5c0 36.86-29.89 66.75-66.75 66.75h-1066.583c-36.819 0-66.667-29.85-66.667-66.67v-666.663c0-36.819 29.848-66.667 66.667-66.667h258.333v-333.333c0-36.819 29.848-66.667 66.667-66.667h258.333v-333.25c0-36.865 29.885-66.75 66.75-66.75z" fill="#fff"/></mask><g mask="url(#e)" transform="translate(-200)"><path d="m1400 66.75v1466.5c0 36.86-29.89 66.75-66.75 66.75h-416.5c-36.865 0-66.75-29.89-66.75-66.75v-1466.5c0-36.865 29.885-66.75 66.75-66.75h416.5c36.87 0 66.75 29.8849 66.75 66.75z" fill="url(#b)"/><g filter="url(#a)"><path d="m1075 466.667v1133.333h-550v-1133.333c0-36.819 29.848-66.667 66.667-66.667h416.663c36.82 0 66.67 29.848 66.67 66.667z" fill="url(#c)"/></g><path d="m200 866.667v666.663c0 36.82 29.848 66.67 66.667 66.67h483.333v-733.333c0-36.819-29.848-66.667-66.667-66.667h-416.666c-36.819 0-66.667 29.848-66.667 66.667z" fill="url(#d)"/></g></svg>
+                <h6 class="service-title">Branding</h6>
                 <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
             <!-- Single service-->
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-service mb-0"><i class="icon service-icon ion-ios-rocket"></i>
-                <h6 class="service-title">Branding</h6>
+              <div class="single-service"><svg class="logobox2" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="m7 8-4 4 4 4"/><path d="m17 8 4 4-4 4"/><path d="m14 4-4.1411 15.4548"/></g></svg>
+                <h6 class="service-title">Customer Support</h6>
                 <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
@@ -568,8 +568,8 @@
 
           <div class="row mini-footer">
             <div class="social-medias col-12 col-lg-5">
-              <a class="instagram" href="#0"><i class="icon ion-logo-instagram"></i></a>
-              <a class="linkedin" href="#0"><i class="icon ion-logo-linkedin"></i></a>
+              <a class="instagram" href="https://www.instagram.com/_ramon_emilio/" target="_blank"><i class="icon ion-logo-instagram"></i></a>
+              <a class="linkedin" href="https://www.linkedin.com/in/ramón-emilio-lebrón-céspedes-59b29b312/" target="_blank"><i class="icon ion-logo-linkedin"></i></a>
               <a class="github" href="#0"><i class="icon ion-logo-github"></i></a>
             </div>
             <p class="copyright-notice col-12 col-lg-7">Copyright © 2024 Ramon Lebron, all rights reserved.</p>
